--- a/Chapter 3 - Mining LinkedIn.ipynb
+++ b/Chapter 3 - Mining LinkedIn.ipynb
@@ -577,7 +577,7 @@
       "        ('VP', 'Vice President'),\n",
       "        ]\n",
       "\n",
-      "    separators = ['/', 'and', '&']\n",
+      "    separators = ['/', ' and ', '&']\n",
       "\n",
       "    csvReader = csv.DictReader(open(csv_file), delimiter=',', quotechar='\"')\n",
       "    contacts = [row for row in csvReader]\n",
@@ -590,11 +590,11 @@
       "        if contacts[i]['Job Title'] == '':\n",
       "            contacts[i]['Job Titles'] = ['']\n",
       "            continue\n",
-      "        titles = [contacts[i]['Job Title']]\n",
+      "        titles = [contacts[i]['Job Title'].strip()]\n",
       "        for title in titles:\n",
       "            for separator in separators:\n",
       "                if title.find(separator) >= 0:\n",
-      "                    titles.remove(title)\n",
+      "                    titles.remove(title.strip())\n",
       "                    titles.extend([title.strip() for title in title.split(separator)\n",
       "                                  if title.strip() != ''])\n",
       "\n",
@@ -699,7 +699,7 @@
       "        ('VP', 'Vice President'),\n",
       "        ]\n",
       "\n",
-      "    separators = ['/', 'and', '&']\n",
+      "    separators = ['/', ' and ', '&']\n",
       "\n",
       "    csvReader = csv.DictReader(open(csv_file), delimiter=',', quotechar='\"')\n",
       "    contacts = [row for row in csvReader]\n",
@@ -712,11 +712,11 @@
       "        if contacts[i]['Job Title'] == '':\n",
       "            contacts[i]['Job Titles'] = ['']\n",
       "            continue\n",
-      "        titles = [contacts[i]['Job Title']]\n",
+      "        titles = [contacts[i]['Job Title'].strip()]\n",
       "        for title in titles:\n",
       "            for separator in separators:\n",
       "                if title.find(separator) >= 0:\n",
-      "                    titles.remove(title)\n",
+      "                    titles.remove(title.strip())\n",
       "                    titles.extend([title.strip() for title in title.split(separator)\n",
       "                                  if title.strip() != ''])\n",
       "\n",
