--- a/_Appendix C - Python & IPython Notebook Tips.ipynb
+++ b/_Appendix C - Python & IPython Notebook Tips.ipynb
@@ -386,7 +386,7 @@
      "source": [
       "### Dictionary Comprehensions\n",
       "\n",
-      "In the same way that you can concisely construct lists with list comprehensions, you can concicely construct dictionaries with dictionary comprehensions. The underlying concept involved and the syntax is very similar to list comprehensions. The following example illustrates a few different way to create the same dictionary and introduces dictionary construction syntax."
+      "In the same way that you can concisely construct lists with list comprehensions, you can concisely construct dictionaries with dictionary comprehensions. The underlying concept involved and the syntax is very similar to list comprehensions. The following example illustrates a few different way to create the same dictionary and introduces dictionary construction syntax."
      ]
     },
     {
