--- a/Chapter 9 - Twitter Cookbook.ipynb
+++ b/Chapter 9 - Twitter Cookbook.ipynb
@@ -895,12 +895,16 @@
       "                return\n",
       "        except URLError, e:\n",
       "            error_count += 1\n",
+      "            time.sleep(wait_period)\n",
+      "            wait_period *= 1.5\n",
       "            print >> sys.stderr, \"URLError encountered. Continuing.\"\n",
       "            if error_count > max_errors:\n",
       "                print >> sys.stderr, \"Too many consecutive errors...bailing out.\"\n",
       "                raise\n",
       "        except BadStatusLine, e:\n",
       "            error_count += 1\n",
+      "            time.sleep(wait_period)\n",
+      "            wait_period *= 1.5\n",
       "            print >> sys.stderr, \"BadStatusLine encountered. Continuing.\"\n",
       "            if error_count > max_errors:\n",
       "                print >> sys.stderr, \"Too many consecutive errors...bailing out.\"\n",
@@ -1252,12 +1256,12 @@
       "        d += 1\n",
       "        (queue, next_queue) = (next_queue, [])\n",
       "        for fid in queue:\n",
-      "            follower_ids = get_friends_followers_ids(twitter_api, user_id=fid, \n",
+      "            _, follower_ids = get_friends_followers_ids(twitter_api, user_id=fid, \n",
       "                                                     friends_limit=0, \n",
       "                                                     followers_limit=limit)\n",
       "            \n",
       "            # Store a fid => follower_ids mapping in MongoDB\n",
-      "            save_to_mongo({'followers' : [ _id for _id in next_queue ]}, \n",
+      "            save_to_mongo({'followers' : [ _id for _id in follower_ids ]}, \n",
       "                          'followers_crawl', '{0}-follower_ids'.format(fid))\n",
       "            \n",
       "            next_queue += follower_ids\n",
